force-app/main/default/objects/Opportunity/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated via a workflow then the Opportunity is stage of Policy - Quote Accepted and the Policy_End_Date__c &gt;= Today</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>