force-app/main/default/objects/Opportunity/fields/Add_to_Sales_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Sales_Cadence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate to an automation whether the record will need to be added to a Sales Engagement Cadence</description>
    <label>Add to Sales Cadence</label>
    <type>Checkbox</type>
</CustomField>