force-app/main/default/objects/Opportunity/fields/Addon_Product_BE__c.field-meta.xml
<CustomField>
    <fullName>Addon_Product_BE__c</fullName>
    <label>Addon Product - BE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>