force-app/main/default/objects/Opportunity/fields/Addon_Product_LE_plus__c.field-meta.xml
<CustomField>
    <fullName>Addon_Product_LE_plus__c</fullName>
    <label>Addon Product - LE+</label>
    <length>255</length>
    <type>Text</type>
</CustomField>