force-app/main/default/objects/Opportunity/fields/AE_Modular_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>AE_Modular_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this opportunity is associated with the Modular Business Unit</description>
    <label>AE Modular Opportunity</label>
    <type>Checkbox</type>
</CustomField>