force-app/main/default/objects/Opportunity/fields/Afters_from_Demo__c.field-meta.xml
<CustomField>
    <fullName>Afters_from_Demo__c</fullName>
    <description>What are their &apos;Afters&apos; from the Demo?</description>
    <label>Afters from Demo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>