force-app/main/default/objects/Opportunity/fields/Afters_from_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Afters_from_Meeting__c</fullName>
    <description>What are their &apos;Afters&apos; from the Meeting?</description>
    <label>Afters from Meeting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>