force-app/main/default/objects/Opportunity/fields/Agency_Dealing_With__c.field-meta.xml
<CustomField>
    <fullName>Agency_Dealing_With__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opportunities that an agency is now dealing with</description>
    <label>Agency Dealing With</label>
    <type>Checkbox</type>
</CustomField>