force-app/main/default/objects/Opportunity/fields/Agreed_Actions__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Actions__c</fullName>
    <label>Agreed Actions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>