force-app/main/default/objects/Opportunity/fields/Agreed_Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Deadline_Date__c</fullName>
    <description>What is the agreed deadline date?</description>
    <label>Agreed Deadline Date</label>
    <type>Date</type>
</CustomField>