force-app/main/default/objects/Opportunity/fields/Agreed_Escalation_Process__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Escalation_Process__c</fullName>
    <description>What is the agreed escalation process?</description>
    <label>Agreed Escalation Process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No escalation</fullName>
            </value>
            <value>
                <fullName>Blocker to payment</fullName>
            </value>
            <value>
                <fullName>Removed from site</fullName>
            </value>
            <value>
                <fullName>Inform the client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>