force-app/main/default/objects/Opportunity/fields/Agreed_Visit_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Visit_Frequency__c</fullName>
    <description>What is the agreed frequency of visits going forward?</description>
    <label>Agreed Visit Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>