force-app/main/default/objects/Opportunity/fields/Agreement_End_Date_PL__c.field-meta.xml
<CustomField>
    <fullName>Agreement_End_Date_PL__c</fullName>
    <label>Agreement End Date (PL)</label>
    <type>Date</type>
</CustomField>