force-app/main/default/objects/Opportunity/fields/Agreement_End_Date_PL_Affiliate__c.field-meta.xml
<CustomField>
    <fullName>Agreement_End_Date_PL_Affiliate__c</fullName>
    <inlineHelpText>This field is used to determine when a Win-Back Opportunity should be created.</inlineHelpText>
    <label>Agreement End Date</label>
    <type>Date</type>
</CustomField>