force-app/main/default/objects/Opportunity/fields/Agreement_Requested_by_Customer__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Requested_by_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to determine whether weekly reminders will need to be send out to the Account.Owner via a scheduled Flow (Opportunity: Scheduled - Sending Agreement Approval Reminder). Will be set to True by Flow once button Request Agreement has been used</description>
    <label>Agreement Requested by Customer</label>
    <type>Checkbox</type>
</CustomField>