force-app/main/default/objects/Opportunity/fields/Agreement_Sent_To__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Sent_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement Sent To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Agreement Sent To)</relationshipLabel>
    <relationshipName>OpportunitiesH9II</relationshipName>
    <type>Lookup</type>
</CustomField>