force-app/main/default/objects/Opportunity/fields/Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Signed__c</fullName>
    <description>Date Agreement Signed</description>
    <label>Agreement Signed</label>
    <type>Date</type>
</CustomField>