force-app/main/default/objects/Opportunity/fields/Aircraft_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Guidance__c</fullName>
    <label>Aircraft Guidance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>