force-app/main/default/objects/Opportunity/fields/Annual_Proposal_Value__c.field-meta.xml
<CustomField>
    <fullName>Annual_Proposal_Value__c</fullName>
    <description>What is the value of the proposal?</description>
    <label>Annual Proposal Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>