force-app/main/default/objects/Opportunity/fields/Annual_Reoccurring_Healthcheck_Interest__c.field-meta.xml
<CustomField>
    <fullName>Annual_Reoccurring_Healthcheck_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annual/Reoccurring Healthcheck Interest</label>
    <type>Checkbox</type>
</CustomField>