force-app/main/default/objects/Opportunity/fields/AP_IR35_T_Complete_Demo__c.field-meta.xml
<CustomField>
    <fullName>AP_IR35_T_Complete_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AP IR35 T Complete Demo</label>
    <type>Checkbox</type>
</CustomField>