force-app/main/default/objects/Opportunity/fields/AP_IR35_T_Getting_Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>AP_IR35_T_Getting_Agreement_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AP IR35 T Getting Agreement Signed</label>
    <type>Checkbox</type>
</CustomField>