force-app/main/default/objects/Opportunity/fields/AP_IR35_T_Sending_Agreement__c.field-meta.xml
<CustomField>
    <fullName>AP_IR35_T_Sending_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AP IR35 T Sending Agreement</label>
    <type>Checkbox</type>
</CustomField>