force-app/main/default/objects/Opportunity/fields/AP_OPP_Implementing_Off_Payroll__c.field-meta.xml
<CustomField>
    <fullName>AP_OPP_Implementing_Off_Payroll__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AP OPP Implementing Off Payroll</label>
    <type>Checkbox</type>
</CustomField>