force-app/main/default/objects/Opportunity/fields/AP_OPP_OPP_Sales__c.field-meta.xml
<CustomField>
    <fullName>AP_OPP_OPP_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AP OPP OPP Sales</label>
    <type>Checkbox</type>
</CustomField>