force-app/main/default/objects/Opportunity/fields/Audit_Manager__c.field-meta.xml
<CustomField>
    <fullName>Audit_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Audit Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>