force-app/main/default/objects/Opportunity/fields/Avg_placements_per_month__c.field-meta.xml
<CustomField>
    <fullName>Avg_placements_per_month__c</fullName>
    <label>Avg placements per month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>