force-app/main/default/objects/Opportunity/fields/BD_Products_Removed__c.field-meta.xml
<CustomField>
    <fullName>BD_Products_Removed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BD Products Removed</label>
    <type>Checkbox</type>
</CustomField>