force-app/main/default/objects/Opportunity/fields/Bordereau_Contact__c.field-meta.xml
<CustomField>
    <fullName>Bordereau_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bordereau Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Bordereau Contact)</relationshipLabel>
    <relationshipName>PartnerOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>