force-app/main/default/objects/Opportunity/fields/Business_engage_in_any_other_activities__c.field-meta.xml
<CustomField>
    <fullName>Business_engage_in_any_other_activities__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does your business engage in any other activities?</description>
    <inlineHelpText>Does your business engage in any other activities?</inlineHelpText>
    <label>Business engage in any other activities?</label>
    <type>Checkbox</type>
</CustomField>