force-app/main/default/objects/Opportunity/fields/Cancellation_date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_date__c</fullName>
    <label>Cancellation date</label>
    <type>Date</type>
</CustomField>