force-app/main/default/objects/Opportunity/fields/Cert_Practicing__c.field-meta.xml
<CustomField>
    <fullName>Cert_Practicing__c</fullName>
    <label>Cert Practicing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>