force-app/main/default/objects/Opportunity/fields/Claims_Made__c.field-meta.xml
<CustomField>
    <fullName>Claims_Made__c</fullName>
    <label>Claims Made</label>
    <length>255</length>
    <type>Text</type>
</CustomField>