force-app/main/default/objects/Opportunity/fields/Client_or_Fee_Payer__c.field-meta.xml
<CustomField>
    <fullName>Client_or_Fee_Payer__c</fullName>
    <label>Client or Fee Payer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Fee Payer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>