force-app/main/default/objects/Opportunity/fields/Client_or_recruiter__c.field-meta.xml
<CustomField>
    <fullName>Client_or_recruiter__c</fullName>
    <label>Client or recruiter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Recruiter</fullName>
            </value>
            <value>
                <fullName>Affinity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>