force-app/main/default/objects/Opportunity/fields/Client_Partnership_Launch_Comms__c.field-meta.xml
<CustomField>
    <fullName>Client_Partnership_Launch_Comms__c</fullName>
    <label>Client Partnership Launch Comms</label>
    <type>Date</type>
</CustomField>