force-app/main/default/objects/Opportunity/fields/Closed_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Closed_DateTime__c</fullName>
    <label>Closed Date/Time</label>
    <type>DateTime</type>
</CustomField>