force-app/main/default/objects/Opportunity/fields/Commercials_Agreed__c.field-meta.xml
<CustomField>
    <fullName>Commercials_Agreed__c</fullName>
    <label>Commercials Agreed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commission</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>