force-app/main/default/objects/Opportunity/fields/Company_name_Sole_Trader_name__c.field-meta.xml
<CustomField>
    <fullName>Company_name_Sole_Trader_name__c</fullName>
    <label>Company name - Sole Trader name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>