force-app/main/default/objects/Opportunity/fields/Complete_Comply__c.field-meta.xml
<CustomField>
    <fullName>Complete_Comply__c</fullName>
    <label>Complete/Comply</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Comply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>