force-app/main/default/objects/Opportunity/fields/Completed_Ir35_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Completed_Ir35_Assessment__c</fullName>
    <label>Completed Ir35 Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>