force-app/main/default/objects/Opportunity/fields/Contractor_Decision_Maker_Insurance_Audi__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Decision_Maker_Insurance_Audi__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor insurance decision maker?</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Contractor insurance decision maker?)</relationshipLabel>
    <relationshipName>OpportunitiesUyVm</relationshipName>
    <type>Lookup</type>
</CustomField>