force-app/main/default/objects/Opportunity/fields/Cover_Level_IR35__c.field-meta.xml
<CustomField>
    <fullName>Cover_Level_IR35__c</fullName>
    <label>Cover Level (IR35)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>