force-app/main/default/objects/Opportunity/fields/Cover_Level_PI__c.field-meta.xml
<CustomField>
    <fullName>Cover_Level_PI__c</fullName>
    <label>Cover Level (PI)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>