force-app/main/default/objects/Opportunity/fields/Cover_Level_PL__c.field-meta.xml
<CustomField>
    <fullName>Cover_Level_PL__c</fullName>
    <label>Cover Level (PL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>