force-app/main/default/objects/Opportunity/fields/CoverLevel_D_O__c.field-meta.xml
<CustomField>
    <fullName>CoverLevel_D_O__c</fullName>
    <label>CoverLevel (D&amp;O)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>