force-app/main/default/objects/Opportunity/fields/Create_Renewal_Task__c.field-meta.xml
<CustomField>
    <fullName>Create_Renewal_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determine whether a task will need to be created by automation</description>
    <label>Create Renewal Task</label>
    <type>Checkbox</type>
</CustomField>