force-app/main/default/objects/Opportunity/fields/Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Time__c</fullName>
    <description>Returns the date and time the opportunity was created</description>
    <formula>DATETIMEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date and time the opportunity was created</inlineHelpText>
    <label>Created Date Time</label>
    <type>DateTime</type>
</CustomField>