force-app/main/default/objects/Opportunity/fields/Critical_Rail_Work__c.field-meta.xml
<CustomField>
    <fullName>Critical_Rail_Work__c</fullName>
    <label>Critical Rail Work</label>
    <length>255</length>
    <type>Text</type>
</CustomField>