force-app/main/default/objects/Opportunity/fields/Current_Compliance_Onboarding_System__c.field-meta.xml
<CustomField>
    <fullName>Current_Compliance_Onboarding_System__c</fullName>
    <description>What system/process do they currently use for onboarding &amp; compliance?</description>
    <label>Current Compliance &amp; Onboarding System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>