force-app/main/default/objects/Opportunity/fields/Current_Insurance_Process__c.field-meta.xml
<CustomField>
    <fullName>Current_Insurance_Process__c</fullName>
    <label>Current Insurance Process?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>