force-app/main/default/objects/Opportunity/fields/Current_Insurer__c.field-meta.xml
<CustomField>
    <fullName>Current_Insurer__c</fullName>
    <label>Current Insurer</label>
    <type>TextArea</type>
</CustomField>