force-app/main/default/objects/Opportunity/fields/Current_IR35_Tool__c.field-meta.xml
<CustomField>
    <fullName>Current_IR35_Tool__c</fullName>
    <label>Current IR35 Tool</label>
    <length>255</length>
    <type>Text</type>
</CustomField>