force-app/main/default/objects/Opportunity/fields/Current_Strength_or_Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Current_Strength_or_Weaknesses__c</fullName>
    <description>What are the strengths/weaknesses of their current onboarding and compliance process/system?</description>
    <inlineHelpText>What are the strengths/weaknesses of their current onboarding and compliance process/system?</inlineHelpText>
    <label>Current Strength or Weaknesses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>