force-app/main/default/objects/Opportunity/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <description>The email address of the customer Account. Populated by a Process &quot;Update Related Object Account Emails&quot;.</description>
    <label>Customer Email</label>
    <type>Email</type>
</CustomField>