force-app/main/default/objects/Opportunity/fields/Date_Agreement_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Agreement_Sent__c</fullName>
    <label>Date Agreement Sent</label>
    <type>Date</type>
</CustomField>