force-app/main/default/objects/Opportunity/fields/Date_Attended_Implementationl__c.field-meta.xml
<CustomField>
    <fullName>Date_Attended_Implementationl__c</fullName>
    <label>Date Attended (Implementationl)</label>
    <type>Date</type>
</CustomField>