force-app/main/default/objects/Opportunity/fields/Date_Booked_For_Implementationl__c.field-meta.xml
<CustomField>
    <fullName>Date_Booked_For_Implementationl__c</fullName>
    <label>Date Booked For (Implementationl)</label>
    <type>Date</type>
</CustomField>