force-app/main/default/objects/Opportunity/fields/Date_called__c.field-meta.xml
<CustomField>
    <fullName>Date_called__c</fullName>
    <label>Date called</label>
    <type>Date</type>
</CustomField>