force-app/main/default/objects/Opportunity/fields/Date_Called_GI__c.field-meta.xml
<CustomField>
    <fullName>Date_Called_GI__c</fullName>
    <label>Date Called (GI)</label>
    <type>Date</type>
</CustomField>