force-app/main/default/objects/Opportunity/fields/Date_Called_PL__c.field-meta.xml
<CustomField>
    <fullName>Date_Called_PL__c</fullName>
    <label>Date Called- (PL)</label>
    <type>Date</type>
</CustomField>