force-app/main/default/objects/Opportunity/fields/Date_Demo_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Demo_Completed__c</fullName>
    <label>Date Demo Completed</label>
    <type>Date</type>
</CustomField>