force-app/main/default/objects/Opportunity/fields/Date_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Email_Sent__c</fullName>
    <description>What date was the email sent?</description>
    <label>Date Email Sent</label>
    <type>Date</type>
</CustomField>