force-app/main/default/objects/Opportunity/fields/Date_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Date_Email_Template__c</fullName>
    <description>That field converts date/time field for the date field for the email templates cutting out the hour from RN_Action_Date__c</description>
    <formula>IF( 
ISPICKVAL(Type , &apos;Renewal&apos;),
LPAD(TEXT(DAY(DATEVALUE(Policy_Inception_Date__c) - 1)), 2, &apos;0&apos;) + &apos;/&apos; + LPAD(TEXT(MONTH(DATEVALUE(Policy_Inception_Date__c) - 1)), 2, &apos;0&apos;) + &apos;/&apos; + TEXT(YEAR(DATEVALUE(Policy_Inception_Date__c) - 1)),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Email Template</label>
    <type>Text</type>
</CustomField>