force-app/main/default/objects/Opportunity/fields/Date_Exhausted__c.field-meta.xml
<CustomField>
    <fullName>Date_Exhausted__c</fullName>
    <description>The date we call the lead dead</description>
    <label>Date Exhausted</label>
    <type>Date</type>
</CustomField>