force-app/main/default/objects/Opportunity/fields/Date_follow_up_demo_booked__c.field-meta.xml
<CustomField>
    <fullName>Date_follow_up_demo_booked__c</fullName>
    <label>Date follow up demo booked</label>
    <type>Date</type>
</CustomField>