force-app/main/default/objects/Opportunity/fields/Date_Healthcheck_Booked__c.field-meta.xml
<CustomField>
    <fullName>Date_Healthcheck_Booked__c</fullName>
    <description>The date booked for the IR35 health check.</description>
    <label>Date Healthcheck Booked</label>
    <type>Date</type>
</CustomField>