force-app/main/default/objects/Opportunity/fields/Date_Healthcheck_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Healthcheck_Completed__c</fullName>
    <description>The date that the IR35 Health Check was completed.</description>
    <label>Date Healthcheck Completed</label>
    <type>Date</type>
</CustomField>