force-app/main/default/objects/Opportunity/fields/Date_Internal_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Internal_Email_Sent__c</fullName>
    <description>What date was the Internal Email sent?</description>
    <label>Date Internal Email Sent</label>
    <type>Date</type>
</CustomField>