force-app/main/default/objects/Opportunity/fields/Date_introduced_GI__c.field-meta.xml
<CustomField>
    <fullName>Date_introduced_GI__c</fullName>
    <label>Date introduced (GI)</label>
    <type>Date</type>
</CustomField>