force-app/main/default/objects/Opportunity/fields/Date_KIB_Quote_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_KIB_Quote_Sent__c</fullName>
    <label>Date KIB Quote Sent</label>
    <type>Date</type>
</CustomField>