force-app/main/default/objects/Opportunity/fields/Date_of_Demo__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Demo__c</fullName>
    <label>Date of Demo</label>
    <type>Date</type>
</CustomField>