force-app/main/default/objects/Opportunity/fields/Date_of_follow_up_meeting__c.field-meta.xml
<CustomField>
    <fullName>Date_of_follow_up_meeting__c</fullName>
    <label>Date of follow up meeting</label>
    <type>Date</type>
</CustomField>