force-app/main/default/objects/Opportunity/fields/Date_of_Meeting_IR35_Health_Check__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Meeting_IR35_Health_Check__c</fullName>
    <label>Date of Meeting (IR35 Health Check)</label>
    <type>Date</type>
</CustomField>