force-app/main/default/objects/Opportunity/fields/Date_of_Meeting_OPP__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Meeting_OPP__c</fullName>
    <label>Date of Meeting (OPP)</label>
    <type>Date</type>
</CustomField>