force-app/main/default/objects/Opportunity/fields/Date_of_Meeting_PI_Audit__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Meeting_PI_Audit__c</fullName>
    <label>Date of Meeting (PI Audit)</label>
    <type>Date</type>
</CustomField>