force-app/main/default/objects/Opportunity/fields/Date_of_Meeting_PL_Affiliate__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Meeting_PL_Affiliate__c</fullName>
    <label>Date of Meeting (PL Affiliate)</label>
    <type>Date</type>
</CustomField>