force-app/main/default/objects/Opportunity/fields/Date_of_Meeting_PL_Trade_Body__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Meeting_PL_Trade_Body__c</fullName>
    <label>Date of Meeting (PL Trade Body)</label>
    <type>Date</type>
</CustomField>