force-app/main/default/objects/Opportunity/fields/Date_of_Progress_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Progress_Meeting__c</fullName>
    <description>The date of the Progress Meeting.</description>
    <label>Date of Progress Meeting</label>
    <type>Date</type>
</CustomField>