force-app/main/default/objects/Opportunity/fields/Date_proposal_form_completed__c.field-meta.xml
<CustomField>
    <fullName>Date_proposal_form_completed__c</fullName>
    <label>Date proposal form completed</label>
    <type>Date</type>
</CustomField>