force-app/main/default/objects/Opportunity/fields/Date_proposal_form_sent__c.field-meta.xml
<CustomField>
    <fullName>Date_proposal_form_sent__c</fullName>
    <inlineHelpText>Date proposal form sent</inlineHelpText>
    <label>Date proposal form sent</label>
    <type>Date</type>
</CustomField>