force-app/main/default/objects/Opportunity/fields/Date_proposal_form_sent_IR35_HC__c.field-meta.xml
<CustomField>
    <fullName>Date_proposal_form_sent_IR35_HC__c</fullName>
    <inlineHelpText>Date proposal form sent (IR35 Health Check)</inlineHelpText>
    <label>Date proposal form sent (IR35 HC)</label>
    <type>Date</type>
</CustomField>