force-app/main/default/objects/Opportunity/fields/Date_proposal_form_sent_OPP__c.field-meta.xml
<CustomField>
    <fullName>Date_proposal_form_sent_OPP__c</fullName>
    <label>Date proposal form sent (OPP)</label>
    <type>Date</type>
</CustomField>