force-app/main/default/objects/Opportunity/fields/Date_Proposal_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Proposal_Sent__c</fullName>
    <label>Date Proposal Sent</label>
    <type>Date</type>
</CustomField>