force-app/main/default/objects/Opportunity/fields/Date_Templates_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Templates_Sent__c</fullName>
    <description>What date were the templates sent?</description>
    <label>Date Templates Sent</label>
    <type>Date</type>
</CustomField>